--- a/Xsis.Web/Views/Biodata/Index.cshtml
+++ b/Xsis.Web/Views/Biodata/Index.cshtml
@@ -9,7 +9,7 @@
         <thead>
             <tr>
                 <td>
-                    <h4 class="biru">Biodata<button type="button" class="btn btn-link" id="idBtnCreateBiodata"><span class="glyphicon glyphicon-pencil" aria-hidden="true"></span></button></h4>
+                    <h4 class="biru">Biodata<button type="button" class="btn btn-link" id="idBtnEditBiodata"><span class="glyphicon glyphicon-pencil" aria-hidden="true"></span></button></h4>
                 </td>
             </tr>
         </thead>
@@ -18,7 +18,7 @@
 </div>
 
 <div class="modal fade" id="idMdlEditBiodata" tabindex="-1" role="dialog">
-    <div class="modal-dialog" role="document">
+    <div class="modal-dialog" style="width:850px;" role="document">
         <div class="modal-content">
             <div class="modal-header birubg">
                 @*<button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>*@
@@ -37,7 +37,7 @@
 
 
 <script>
-
+    var vDataID = 1;
     var vDataFamilyTreeType =
           { 1: 'Parents', 2: 'Children' };
     var vDataFamilyRelation =
@@ -55,17 +55,16 @@
     var vDataMaritalStatus =
         { 1: 'Menikah', 2: 'Single' };
 
+
     $(document).ready(function () {
 
         var vStrHtml = '';
         $.ajax({
-            url: '/Biodata/Tampil',
-            data: '{ID:vDataID}',
+            url: '/Biodata/AmbilData',
+            data: {ID:vDataID},
             method: 'Get',
-            success: function (mdl) {
+            success: function (d) {
                 debugger;
-                $.each(mdl, function (i, d) {
-                    debugger;
                     
                     vConvert = new Date(d.dob.substr(6, 12) - 0).toString();
                     var bulan = (vConvert.toString()).substr(4, 3);
@@ -122,14 +121,31 @@
                             '<tr class="birutext">' +
                             '<td>Status & Tahun Pernikahan</td>' +
                             '<td>:</td>' +
-                            '<td input>' + vDataMaritalStatus[d.marital_status_id] + '- ' + d.mariage_year + '</td>' +
+                            '<td input>' + vDataMaritalStatus[d.marital_status_id] + ' - ' + d.mariage_year + '</td>' +
                             '</tr>';
-                });
 
                 $('#idTblBodyBiodata').append(vStrHtml);
             }
         });
 
+        $('#idBtnEditBiodata').click(function () {
+            $.ajax({
+                url: '/Biodata/Edit',
+                data: { ID: vDataID },
+                method: 'Post',
+                success: function (mdl) {
+                    $('#idBodyEditBiodata').empty();
+                    $('#idBodyEditBiodata').append(mdl);
+                    $('#idget').val(vDataID); //memasukan nilai vDataID ke dalam idget pada partial view _Edit
+                    $('#idMdlEditBiodata').modal('show');
+                    debugger;
+                },
+                error: function (mdl) {
+                    debugger;
+                }
+            });
+
+        });
    
 
     });
