--- a/Xsis.Web/Views/SelectAccess/Index.cshtml
+++ b/Xsis.Web/Views/SelectAccess/Index.cshtml
@@ -1,26 +1,161 @@
-﻿@model Xsis.Model.Sertifikasi
-
+﻿
 @{
     Layout = null;
-    if (Session["userID"] == null)
-    {
-        Response.Redirect("~/Login/Index"); //bila belum login sistem akan re-direct ke halaman login
-    }
 }
 
 <!DOCTYPE html>
 
 <html>
-<head>
-    <meta name="viewport" content="width=device-width" />
-    <title>Index</title>
-</head>
-<body>
-    <div>
-        <h1>Select Access</h1>
-        <h2>Hai, @Session["userName"]</h2>
-        <h3>ID : @Session["userID"]</h3>
-        <a href="@Url.Action("Logout","Login")">Logout</a>
-    </div>
-</body>
+    <head>
+        <meta name="viewport" content="width=device-width" />
+        <link href="~/Content/Site.css" rel="stylesheet" type="text/css" />
+        <link href="~/Content/bootstrap.min.css" rel="stylesheet" type="text/css" />
+        <script src="~/Scripts/modernizr-2.6.2.js"></script>
+        <script src="~/Scripts/jquery-3.4.1.min.js"></script>
+        <script src="~/scripts/bootstrap.js"></script>
+
+            <style type="text/css">
+                .background-lgn 
+                {
+                    position: absolute;
+                    margin: auto;
+                    left: 0;
+                    top: 0;
+                    bottom:0;
+                    right:0;
+                    width: 470px;
+                    height: 300px;
+                    background-color: #f0f5f5;
+                    border-color:#000080;
+                    border-style: solid;
+                    border-width: 1px;
+                    text-align:center;
+                }
+                .cntr-content
+                {
+                    position: absolute;
+                    margin: auto;
+                    left: 18%;
+                    top: 5%;
+                    text-align:center;
+                }
+                .brdr-lgn
+                {
+                    border-color:#000080;
+                    border-style: solid;
+                    border-width: 1px;
+                }
+                .fnt
+                {
+                    font-weight:bold;
+                    color:#000080;
+                }
+                .size-lgn
+                {
+                    width: 300px;
+                    height: 30px;
+                }
+              .btn-clr
+              {
+                  font-weight:bold;
+                  color: white;
+                  background-color: #000080;
+                  width: 280px;              
+              }
+              .btn:hover
+              {
+                color: white;
+              }     
+              .btn:focus
+              {
+                  color: white;
+              }             
+        </style>
+        <title>Index</title>
+    </head>
+    <body>
+        <div class="row background-lgn">
+            <div class="col-md-6 cntr-content">
+                <form id="frmLogin">
+                    <table>
+                        <tr>
+                            <td><h1 class="fnt" style="font-size:40px;">XSIS 2.0</h1></td>
+                        </tr>
+                        <tr>
+                            <td><input type="text" class="form-control brdr-lgn size-lgn" id="txtEmail" placeholder="Email"></td>
+                        </tr>
+                        <tr>
+                            <td><input type="text" class="form-control brdr-lgn size-lgn" id="txtPwd" placeholder="Password"></td>
+                        </tr>
+                        <tr>
+                            <td><button type="button" class="btn btn-clr size-lgn" id="btnSubmit">Masuk</button></td>
+                        </tr>
+                        <tr>
+                            <td><a class="fnt" href="https://www.w3schools.com/html/">Lupa Password</a></td>
+                        </tr>
+                        <tr>
+                            <td>
+                                <br />
+                                <br />
+                                <p class="fnt">2020 - Xsis Mitra Utama</p>
+                            </td>
+                        </tr>
+                    </table>           
+                </form> 
+            </div>
+        </div>
+    </body>
 </html>
+
+
+<script>
+    $('#btnSubmit').click(function () {
+        debugger;
+        var vUser = $('#txtEmail').val()
+        var vPwd = $('#txtPwd').val()
+        debugger;
+
+        $.ajax({
+            url: '/Login/cekUser',
+            data: { vUser },
+            method: 'post',
+            success: function (mdl)
+            {
+                debugger;
+                if (mdl.email == vUser || mdl.abuid == vUser && mdl.abpwd == vPwd)
+                {
+                    if (mdl.is_delete == true)
+                    {
+                        debugger;
+                        alert("Akun anda tidak aktif");
+                    }
+                    else if (mdl.is_locked == true)
+                    {
+                        debugger;
+                        alert("Akun anda terkunci");
+                    }
+                    else
+                    {
+                        debugger;
+                        var uID = mdl.id
+                        var url="@Url.Action("Index","Home")"
+                        Session["UserID"] = uID;
+                        window.location.href = url;
+                    }
+                }
+                else
+                {
+                    debugger;
+                    alert("Invalid Email / Password");
+                }
+            },
+            error: function (mdl)
+            {
+                debugger;
+                alert("Invalid Email / Password");
+            }
+
+        });
+
+    });
+</script>
