--- a/Xsis.Web/Views/Keluarga/_Delete.cshtml
+++ b/Xsis.Web/Views/Keluarga/_Delete.cshtml
@@ -1,5 +1,4 @@
-﻿
-<table class="table-responsive">
+﻿<table class="table-responsive">
     <tr>
         <td>
             <input type="hidden" name="id" id="idget" />
@@ -11,7 +10,7 @@
         </td>
         <td align="center">
             <label class="merahtext" style="font-size:17px;">
-                &nbsp;&nbsp;&nbsp;&nbsp;Anda yakin ingin menghapus keluarga <br />
+                &nbsp;&nbsp;&nbsp;&nbsp;Anda yakin ingin menghapus anggota bernama <br />
                 <input type="text" readonly style="border:0px; width:400px; text-align:center; font-size:20px;" id="idLblNamaKeluarga" />
             </label>
         </td>
