--- a/Xsis.Web/Views/Biodata/Index.cshtml
+++ b/Xsis.Web/Views/Biodata/Index.cshtml
@@ -37,7 +37,7 @@
 
 
 <script>
-    var vDataID = 1;
+    var vDataID = 4;
     var vDataFamilyTreeType =
           { 1: 'Parents', 2: 'Children' };
     var vDataFamilyRelation =
@@ -66,12 +66,6 @@
             success: function (d) {
                 debugger;
 
-                vConvert = new Date(d.dob.substr(6, 12) - 0).toString();
-                var bulan = (vConvert.toString()).substr(4, 3);
-                var tanggal = (vConvert.toString()).substr(8, 2);
-                var tahun = (vConvert.toString()).substr(11, 4);
-                var vDataDob = tanggal + ' ' + vDataBulan[bulan] + ' ' + tahun;
-
                 vStrHtml = vStrHtml +
                 '<tr class="birutext">' +
                 '<td>Nama Lengkap</td>' +
@@ -91,7 +85,7 @@
                 '<tr class="birutext">' +
                 '<td>Tempat, Tgl. Lahir</td>' +
                 '<td>:</td>' +
-                '<td input>' + d.pob + ', ' + vDataDob + '</td>' +
+                '<td input>' + d.pob + ', ' +  + '</td>' +
                 '</tr>' +
                 '<tr class="birutext">' +
                 '<td>Jenis Kelamin, Tinggi (cm), Berat (kg)</td>' +
@@ -125,6 +119,9 @@
                 '</tr>';
 
                 $('#idTblBodyBiodata').append(vStrHtml);
+            },
+            error: function (d) {
+                debugger;
             }
         });
 
